# flyio-fastapi-poetry-template

./: Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
flyio_fastapi_poetry_template/: main.py
